--- a/themes/mdo/templates/contact.mustache
+++ b/themes/mdo/templates/contact.mustache
@@ -1,5 +1,5 @@
 <div id="outline-container-sec-1" class="outline-2">
-  <h2 id="sec-1">About {{author}}</h2>
+  <h2 id="sec-1">Contact {{author}}</h2>
   <div class="outline-text-2" id="text-1">
     <p>{{author}} is a little lazy, he/she leaves nothing here. :-p</p>
     <hr/>
